# server_prototype

./: README.md  fine_granular.py  fine_granular_server.py  main.py  pyproject.toml  quality_explanation_server_.py
